# simple-texteditor

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/MyString/: CMakeLists.txt  MyString.cpp  MyString.h
src/: Adapter.cpp  Adapter.h  Observe.cpp  Observe.h  main.cpp
src/controller/: Controller.cpp  Controller.h
src/model/: Model.cpp  Model.h
src/view/: View.cpp  View.h
